fix: actualizaciones faltantes al swagger
