# swagger/swagger.yml
@@ -15,22 +15,28 @@ paths:
     get:
       tags:
       - centro_costos
-      description: get all objects
+      description: Lista todos los centros de costos
       operationId: CentroCostos.Get
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TipoComprobante'
         "403":
           description: :objectId is empty
   /comprobante/:
     get:
       tags:
       - comprobante
-      description: get all objects
+      description: Obtiene todos los objetos
       operationId: ComprobanteController.Get
       responses:
         "200":
-          description: Comprobante models.Comprobante
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Comprobante'
         "403":
           description: :objectId is empty
     post:
@@ -47,18 +53,24 @@ paths:
           $ref: '#/definitions/models.Comprobante'
       responses:
         "200":
-          description: '{int} models.Comprobante.Id'
-        "403":
-          description: body is empty
+          description: '{string} "comprobante-added"'
   /comprobante/{id}:
     get:
       tags:
       - comprobante
-      description: get object por id
+      description: Obtiene los objetos por id
       operationId: ComprobanteController.Get
+      parameters:
+      - in: path
+        name: id
+        description: UUID
+        required: true
+        type: string
       responses:
         "200":
-          description: Comprobante models.Comprobante
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Comprobante'
         "403":
           description: :objectId is empty
     put:
@@ -67,15 +79,20 @@ paths:
       description: Update models.Comprobante
       operationId: ComprobanteController.Update models.Comprobante
       parameters:
+      - in: path
+        name: id
+        description: The objectid you want to update
+        required: true
+        type: string
       - in: body
         name: body
-        description: The objectid you want to update
+        description: The new content
         required: true
         schema:
           $ref: '#/definitions/models.Comprobante'
       responses:
         "200":
-          description: '{int} models.Comprobante.Id'
+          description: '{string} "comprobante-updated"'
         "403":
           description: body is empty
     delete:
@@ -84,17 +101,14 @@ paths:
       description: Delete models.Comprobante
       operationId: ComprobanteController.Delete models.Comprobante
       parameters:
-      - in: body
-        name: body
+      - in: path
+        name: id
         description: The objectid you want to delete
         required: true
-        schema:
-          $ref: '#/definitions/models.Comprobante'
+        type: string
       responses:
         "200":
-          description: '{int} models.Comprobante.Id'
-        "403":
-          description: body is empty
+          description: '{string} "comprobante-deleted"'
   /concepto/:
     get:
       tags:
@@ -103,13 +117,17 @@ paths:
       operationId: ConceptoController.Get
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Concepto'
         "403":
           description: :objectId is empty
     post:
       tags:
       - concepto
-      description: Post models.Concepto
+      description: Método Post de HTTP de models.Concepto
       operationId: ConceptoController.Post models.Concepto
       parameters:
       - in: body
@@ -120,18 +138,28 @@ paths:
           $ref: '#/definitions/models.Concepto'
       responses:
         "200":
-          description: '{int} models.Concepto.Id'
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Concepto'
         "403":
           description: body is empty
   /concepto/{UUID}:
     get:
       tags:
       - concepto
-      description: get all objects
+      description: Trae un objeto por UUID
       operationId: ConceptoController.Get
+      parameters:
+      - in: path
+        name: UUID
+        description: UUID del objeto
+        required: true
+        type: string
       responses:
         "200":
-          description: TipoComprobante models.Concepto
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Concepto'
         "403":
           description: :objectId is empty
     put:
@@ -142,12 +170,18 @@ paths:
       parameters:
       - in: path
         name: UUID
-        description: The key for object to update
+        description: UUID del objeto a actualizar
         required: true
         type: string
+      - in: body
+        name: body
+        description: El nuevo contenido
+        required: true
+        schema:
+          $ref: '#/definitions/models.Concepto'
       responses:
         "200":
-          description: '{int} models.Concepto.ID'
+          description: '{string} "concept-updated"'
         "403":
           description: body is empty
     delete:
@@ -163,7 +197,7 @@ paths:
         type: string
       responses:
         "200":
-          description: '{int} models.Concepto.ID'
+          description: '{string} "concept-deleted"'
         "403":
           description: body is empty
   /detalle_cuenta_contable/:
@@ -174,9 +208,11 @@ paths:
       operationId: DetalleCuentaContable.Get
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
-        "403":
-          description: :objectId is empty
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.DetalleCuentaContable'
   /naturaleza_cuenta_contable/:
     get:
       tags:
@@ -185,9 +221,11 @@ paths:
       operationId: NaturalezaCuentaContable.Get
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
-        "403":
-          description: :objectId is empty
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.NaturalezaCuentaContable'
   /nodo_cuenta_contable/:
     get:
       tags:
@@ -195,13 +233,17 @@ paths:
       description: get all objects
       operationId: NodoCuentaContableController.GetTree
       parameters:
-      - in: fullTree
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
+      - in: query
+        name: fullTree
+        description: With no active? Default false
+        type: boolean
       responses:
         "200":
-          description: NodoRubroApropiacion []models.NodoCuentaContable
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.ArbolNbFormatNode'
         "403":
           description: :objectId is empty
     post:
@@ -218,7 +260,7 @@ paths:
           $ref: '#/definitions/models.NodoCuentaContable'
       responses:
         "200":
-          description: '{int} models.NodoCuentaContable.Id'
+          description: '{string} "node-added"'
         "403":
           description: body is empty
   /nodo_cuenta_contable/{UUID}:
@@ -227,9 +269,17 @@ paths:
       - nodo_cuenta_contable
       description: get all objects
       operationId: NodoCuentaContableController.Get
+      parameters:
+      - in: path
+        name: UUID
+        description: UUID del objeto
+        required: true
+        type: string
       responses:
         "200":
-          description: NodoRubroApropiacion models.NodoCuentaContable
+          description: ""
+          schema:
+            $ref: '#/definitions/models.NodoCuentaContable'
         "403":
           description: :objectId is empty
     put:
@@ -243,16 +293,22 @@ paths:
         description: The key for object to update
         required: true
         type: string
+      - in: body
+        name: body
+        description: The new content
+        required: true
+        schema:
+          $ref: '#/definitions/models.NodoCuentaContable'
       responses:
         "200":
-          description: '{int} models.NodoCuentaContable.Id'
+          description: '{string} "node-updated"'
         "403":
           description: body is empty
   /nodo_cuenta_contable/change_node_state/{UUID}:
     put:
       tags:
       - nodo_cuenta_contable
-      description: Post models.NodoCuentaContable
+      description: 'Change Node State. TODO: currently, this funtion will only change state of target node, in future realises maybe it can change full branch state.'
       operationId: NodoCuentaContableController.PUT ChangeNodeState
       parameters:
       - in: path
@@ -262,7 +318,7 @@ paths:
         type: string
       responses:
         "200":
-          description: '{int} models.NodoCuentaContable.Id'
+          description: '{string} "node-state-changed"'
         "403":
           description: body is empty
   /nodo_cuenta_contable/cuentas:
@@ -279,11 +335,13 @@ paths:
       - in: query
         name: limit
         description: Limit the size of result set. Must be an integer
-        type: string
+        type: integer
+        format: int64
       - in: query
         name: offset
         description: Start position of result set. Must be an integer
-        type: string
+        type: integer
+        format: int64
       - in: query
         name: withInactives
         description: With inactives nodes. False is default
@@ -292,7 +350,9 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.ArkaCuentasContables'
+            type: array
+            items:
+              $ref: '#/definitions/models.ArkaCuentasContables'
         "404":
           description: not found resource
   /nodo_cuenta_contable/cuentas/{NaturalezaCuentaContable}:
@@ -309,7 +369,11 @@ paths:
         type: string
       responses:
         "200":
-          description: NodoRubroApropiacion models.NodoCuentaContable
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.ArbolNbFormatNode'
         "403":
           description: :objectId is empty
   /nodo_cuenta_contable/getCuentas/{NaturalezaCuentaContable}:
@@ -322,7 +386,6 @@ paths:
       - in: path
         name: NaturalezaCuentaContable
         description: NaturalezaCuentaContable para el filtro por tipo de cuenta contable(credito/debito)
-        required: true
         type: string
       - in: query
         name: withInactives
@@ -330,7 +393,11 @@ paths:
         type: boolean
       responses:
         "200":
-          description: models.ArkaCuentasContables
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.ArkaCuentasContables'
         "403":
           description: :objectId is empty
   /nodo_cuenta_contable/getNodosCuentasArka/{NaturalezaCuentaContable}:
@@ -347,7 +414,11 @@ paths:
         type: string
       responses:
         "200":
-          description: models.ArkaCuentasContables
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.ArkaCuentasContables'
         "403":
           description: :objectId is empty
   /tipo_comprobante/:
@@ -358,7 +429,11 @@ paths:
       operationId: TipoComprobanteController.Get
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.TipoComprobante'
         "403":
           description: :objectId is empty
     post:
@@ -375,7 +450,7 @@ paths:
           $ref: '#/definitions/models.TipoComprobante'
       responses:
         "200":
-          description: '{int} models.TipoComprobante.Id'
+          description: '{string} "tipo-comprobante-added"'
         "403":
           description: body is empty
   /tipo_comprobante/{id}:
@@ -384,9 +459,17 @@ paths:
       - tipo_comprobante
       description: get object by id
       operationId: TipoComprobanteController.Get
+      parameters:
+      - in: path
+        name: id
+        description: UUID del objeto
+        required: true
+        type: string
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TipoComprobante'
         "403":
           description: :objectId is empty
     put:
@@ -395,15 +478,20 @@ paths:
       description: Update models.TipoComprobante
       operationId: TipoComprobanteController.Update models.TipoComprobante
       parameters:
+      - in: path
+        name: id
+        description: The objectid you want to update
+        required: true
+        type: string
       - in: body
         name: body
-        description: The objectid you want to update
+        description: The new content
         required: true
         schema:
           $ref: '#/definitions/models.TipoComprobante'
       responses:
         "200":
-          description: '{int} models.TipoComprobante.Id'
+          description: '{string} "tipo-comprobante-updated"'
         "403":
           description: body is empty
     delete:
@@ -412,17 +500,14 @@ paths:
       description: Delete models.TipoComprobante
       operationId: TipoComprobanteController.Delete models.TipoComprobante
       parameters:
-      - in: body
-        name: body
+      - in: path
+        name: id
         description: The objectid you want to delete
         required: true
-        schema:
-          $ref: '#/definitions/models.TipoComprobante'
+        type: string
       responses:
         "200":
-          description: '{int} models.TipoComprobante.Id'
-        "403":
-          description: body is empty
+          description: '{string} "tipo-comprobante-deleted"'
   /tipo_moneda/:
     get:
       tags:
@@ -431,10 +516,22 @@ paths:
       operationId: TipoMoneda.Get
       responses:
         "200":
-          description: TipoComprobante models.TipoComprobante
-        "403":
-          description: :objectId is empty
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.TipoMoneda'
 definitions:
+  models.ArbolNbFormatNode:
+    title: ArbolNbFormatNode
+    type: object
+    properties:
+      children:
+        type: array
+        items:
+          $ref: '#/definitions/models.ArbolNbFormatNode'
+      data:
+        $ref: '#/definitions/models.NodoArbolCuentaContable'
   models.ArkaCuentasContables:
     title: ArkaCuentasContables
     type: object
@@ -510,6 +607,14 @@ definitions:
         type: string
       Nombre:
         type: string
+  models.DetalleCuentaContable:
+    title: DetalleCuentaContable
+    type: object
+    properties:
+      Id:
+        type: string
+      Label:
+        type: string
   models.General:
     title: General
     type: object
@@ -520,6 +625,41 @@ definitions:
         type: string
       FechaModificacion:
         type: string
+  models.NaturalezaCuentaContable:
+    title: NaturalezaCuentaContable
+    type: object
+    properties:
+      Id:
+        type: string
+      Label:
+        type: string
+  models.NodoArbolCuentaContable:
+    title: NodoArbolCuentaContable
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      Codigo:
+        type: string
+      FechaCreacion:
+        type: string
+      FechaModificacion:
+        type: string
+      Hijos:
+        type: array
+        items:
+          type: string
+      Nivel:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+      Padre:
+        type: string
+      children:
+        type: array
+        items:
+          $ref: '#/definitions/models.NodoArbolCuentaContable'
   models.NodoCuentaContable:
     title: NodoCuentaContable
     type: object
@@ -597,6 +737,14 @@ definitions:
       FechaModificacion:
         type: string
       TipoDocumento:
+        type: string
+  models.TipoMoneda:
+    title: TipoMoneda
+    type: object
+    properties:
+      Id:
+        type: string
+      Label:
         type: string
 tags:
 - name: nodo_cuenta_contable
